Fix header on mobile

--- a/css/main.less
+++ b/css/main.less
@@ -677,9 +677,9 @@ a:hover   { color: @hoverColor; }
     .about {
         font-size: 17px;
     }
-    .header {
-        margin-bottom: 20px;
-    }
+    // .header {
+    //     margin-bottom: 20px;
+    // }
     .postTitle {
         font-size: 180%;
         line-height: 40px;
